# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
description = "A RabbitMQ connection pool which manages connections based on the amount of channels used per connection"
documentation = "https://docs.rs/lapin-pool"
edition = "2021"
homepage = "https://opentalk.eu/"
license = "EUPL-1.2"
name = "lapin-pool"
publish = true
repository = "https://gitlab.opencode.de/opentalk/libs/lapin-pool"
version = "0.2.0"

[dependencies]
lapin = { version = "3", default-features = false }
log = "0.4"
snafu = "0.8"
tokio-executor-trait = "2"
tokio-reactor-trait = "2.0.0"
tokio = "1"

[dev-dependencies]
pretty_assertions = "1"
