# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
description = "A RabbitMQ connection pool which manages connections based on the amount of channels used per connection"
documentation = "https://docs.rs/lapin-pool"
edition = "2024"
homepage = "https://opentalk.eu/"
license = "EUPL-1.2"
name = "lapin-pool"
publish = true
repository = "https://git.opentalk.dev/opentalk/backend/libs/lapin-pool/"
version = "0.3.0"

[dependencies]
lapin = "4"
log = "0.4"
snafu = "0.9"
tokio = "1"

[dev-dependencies]
pretty_assertions = "1"
